deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-tracker-app
spec:
  selector:
    matchLabels:
      app: food-tracker-app
  template:
    metadata:
      labels:
        app: food-tracker-app
    spec:
      containers:
      - name: food-tracker
        image: abhishekbodhekar/food-tracker:v11
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: food-tracker-app-service
spec:
  selector:
    app: food-tracker-app
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-tracker-pg
spec:
  selector:
    matchLabels:
      app: food-tracker-pg
  template:
    metadata:
      labels:
        app: food-tracker-pg
    spec:
      containers:
      - name: pg
        image: postgres
        ports:
        - containerPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: food-tracker-pg-service
spec:
  selector:
    app: food-tracker-pg
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-t-ingress
spec:
  rules:
  - host: "api.enthu.games" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: food-tracker-app-service
            port:
              number: 8080
  tls:
  - hosts:
    - "api.enthu.games"
    secretName: cert-secret
